adding Date picker

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -347,3 +347,15 @@ img.dataTablereOrder {
   margin-left: auto !important;
   margin-right: 190px !important;
 }
+
+.carousel-inner {
+  height: 100% !important;
+}
+
+.carousel-caption {
+  top: 45% !important;
+}
+
+.carousel-caption h3 {
+  font-size: 42px;
+}
