--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -359,3 +359,11 @@ img.dataTablereOrder {
 .carousel-caption h3 {
   font-size: 42px;
 }
+
+
+.CstmButton{
+  background-color: #94a698 !important;
+  color: rgb(0, 55, 36) !important;
+  font-size: 24px !important;
+  font-weight: 600 !important;
+}
