--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -374,3 +374,86 @@ select.cstmSelectServices option:hover {
   color: rgb(3, 94, 53);
   
 }
+.section .row{
+  margin-top: 7%;
+  margin-bottom: 10%;
+}
+.section .row .col-md-6{
+  background: #f5f5f5;
+  margin-right: -2%;
+  padding: 5%;
+}
+.section h3{
+  color: #004085;
+}
+.section p{
+  margin-top: 10%;
+  color: #545b62;
+}
+.section img
+{
+  width: 100%;
+}
+
+#myDatePicker-input{
+  height: 80px !important;
+  text-align: center !important;
+  background-color: rgb(0, 55, 36);
+  color: #fcba84 !important;
+}
+
+
+
+select.form-control {
+  -webkit-appearance: none !important;
+  -moz-appearance: none !important;
+  appearance: none !important
+}
+
+select.form-control:invalid {
+  color: rgba(255, 255, 255, 0.5) !important
+}
+
+select.form-control+.select-arrow {
+  position: absolute !important;
+  right: 15px !important;
+  top: 50% !important;
+  -webkit-transform: translateY(-50%) !important;
+  transform: translateY(-50%) !important;
+  width: 32px !important;
+  line-height: 32px !important;
+  height: 32px !important;
+  text-align: center !important;
+  pointer-events: none !important;
+  color: rgba(255, 255, 255, 0.5) !important;
+  font-size: 14px !important
+}
+
+select.form-control+.select-arrow:after {
+  content: '\279C' !important;
+  display: block !important;
+  -webkit-transform: rotate(90deg) !important;
+  transform: rotate(90deg) !important
+}
+
+select.form-control option {
+  color: #000 !important
+}
+
+.form-group {
+  position: relative;
+  margin-bottom: 30px
+}
+
+.form-control {
+  background-color: rgba(255, 255, 255, 0.2);
+  height: 60px;
+  padding: 0px 25px;
+  border: none;
+  border-radius: 40px;
+  color: #fff;
+  -webkit-box-shadow: 0px 0px 0px 2px transparent;
+  box-shadow: 0px 0px 0px 2px transparent;
+  -webkit-transition: 0.2s;
+  transition: 0.2s
+}
