--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -67,10 +67,11 @@ body {
   overflow: hidden;
 }
 
-.addedProd {
+.addedAdult {
   padding-right: 10px;
   padding-left: 10px;
   user-select: none;
+  font-size: 24px;
 }
 
 h4 {
@@ -101,12 +102,12 @@ h4 {
   overflow-y: auto;
 }
 
-.suggestedProdCard {
+.suggestedAdultCard {
   width: 100%;
   padding: 0 !important;
 }
 
-.soloProdCard {
+.soloAdultCard {
   padding: 3px 20px !important;
 }
 
@@ -235,7 +236,7 @@ h4 {
   padding: 20px;
 }
 
-.createProductContainer {
+.createAdultuctContainer {
   padding: 10px;
   margin: 10px;
   border: 1px solid rgba(237, 242, 245, 1) !important;
@@ -245,7 +246,7 @@ h4 {
   padding: 20px;
 }
 
-.getAllProd {
+.getAllAdult {
   padding: 20px;
 }
 
@@ -257,7 +258,7 @@ h4 {
   height: 40px;
 }
 
-.getAllProd {
+.getAllAdult {
   padding: 20px;
 }
 
@@ -295,6 +296,16 @@ img.dataTablereOrder {
   font: normal normal bold 18px/40px Roboto !important;
   letter-spacing: 0 !important;
   text-align: left !important;
+}
+
+.minusAdult {
+  color: rgb(0, 55, 36);
+  font-size: 24px !important;
+}
+
+.addAdult {
+  color: rgb(0, 55, 36);
+  font-size: 24px !important;
 }
 
 .loopPrice.text-muted {
@@ -360,8 +371,7 @@ img.dataTablereOrder {
   font-size: 42px;
 }
 
-
-.CstmButton{
+.CstmButton {
   background-color: #94a698 !important;
   color: rgb(8, 48, 34) !important;
   font-size: 24px !important;
@@ -372,29 +382,26 @@ select.cstmSelectServices option:hover {
   margin: 40px;
   background: rgba(189, 180, 180, 0.3);
   color: rgb(3, 94, 53);
-  
 }
 
-#myDatePicker-input{
+#myDatePicker-input {
   height: 80px !important;
   text-align: center !important;
   background-color: rgb(0, 55, 36);
   color: #fcba84 !important;
 }
 
-
-
 select.form-control {
   -webkit-appearance: none !important;
   -moz-appearance: none !important;
-  appearance: none !important
+  appearance: none !important;
 }
 
 select.form-control:invalid {
-  color: rgba(255, 255, 255, 0.5) !important
+  color: rgba(255, 255, 255, 0.5) !important;
 }
 
-select.form-control+.select-arrow {
+select.form-control + .select-arrow {
   position: absolute !important;
   right: 15px !important;
   top: 50% !important;
@@ -406,23 +413,23 @@ select.form-control+.select-arrow {
   text-align: center !important;
   pointer-events: none !important;
   color: rgba(255, 255, 255, 0.5) !important;
-  font-size: 14px !important
+  font-size: 14px !important;
 }
 
-select.form-control+.select-arrow:after {
+select.form-control + .select-arrow:after {
   content: '\279C' !important;
   display: block !important;
   -webkit-transform: rotate(90deg) !important;
-  transform: rotate(90deg) !important
+  transform: rotate(90deg) !important;
 }
 
 select.form-control option {
-  color: #000 !important
+  color: #000 !important;
 }
 
-.form-group { 
+.form-group {
   position: relative;
-  margin-bottom: 30px
+  margin-bottom: 30px;
 }
 
 .form-control {
@@ -435,32 +442,47 @@ select.form-control option {
   -webkit-box-shadow: 0px 0px 0px 2px transparent;
   box-shadow: 0px 0px 0px 2px transparent;
   -webkit-transition: 0.2s;
-  transition: 0.2s
+  transition: 0.2s;
 }
 
-.videoInnerRow{
+.videoInnerRow {
   position: relative !important;
   margin: 0 !important;
   align-items: center;
 }
-.section .row{
+.section .row {
   margin-top: 1%;
   margin-bottom: 5%;
 }
-.section .row .col-md-6{
+.section .row .col-md-6 {
   background: #f5f5f5;
   margin-right: -2%;
   padding: 5%;
 }
-.section h3{
+.section h3 {
   color: #004085;
 }
-.section p{
+.section p {
   margin-top: 10%;
   color: #545b62;
 }
-.section img
-{
-  
+.section img {
   width: 70%;
+}
+.vm-titlebar {
+  padding: 0 !important;
+  padding-right: 5px !important;
+  border: none !important;
+  overflow: hidden !important;
+}
+.vm {
+  position: relative !important;
+  margin: 0px auto !important;
+  width: calc(100% - 20px) !important;
+  min-width: 80% !important;
+  max-width: 80% !important;
+  background-color: #fff !important;
+  top: 25% !important;
+  cursor: default !important;
+  box-shadow: 0 5px 15px rgb(0 0 0 / 50%) !important;
 }
