--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -479,10 +479,20 @@ select.form-control option {
   position: relative !important;
   margin: 0px auto !important;
   width: calc(100% - 20px) !important;
-  min-width: 80% !important;
-  max-width: 80% !important;
+  min-width: 60% !important;
+  max-width: 60% !important;
   background-color: #fff !important;
   top: 25% !important;
   cursor: default !important;
   box-shadow: 0 5px 15px rgb(0 0 0 / 50%) !important;
+}
+
+.chkAbl {
+  background: #9a8067 !important;
+  color: #fff !important;
+  border: none !important;
+  font-weight: 400 !important;
+  text-transform: uppercase !important;
+  font-size: 14px !important;
+  padding: 10px;
 }
