--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -496,3 +496,9 @@ select.form-control option {
   font-size: 14px !important;
   padding: 10px;
 }
+
+.footerDiv {
+  background: rgb(0, 55, 36);
+  padding: 20px 50px;
+  color: #a1a8ba;
+}
