--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -502,3 +502,30 @@ select.form-control option {
   padding: 20px 50px;
   color: #a1a8ba;
 }
+
+.sectionRow {
+  padding: 5%;
+  background: #f5f5f5;
+}
+
+/* Cstm Scroll */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #dbc861;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(0, 55, 36);
+}
