--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -502,7 +502,7 @@ select.form-control option {
 }
 
 .footerDiv {
-  background: rgb(90,119,114);
+  /* background: rgb(90,119,114); */
   padding: 20px 50px;
   color: #a1a8ba;
 }
