--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -492,7 +492,7 @@ select.form-control option {
 }
 
 .chkAbl {
-  background: #9a8067 !important;
+  background: #054927 !important;
   color: #fff !important;
   border: none !important;
   font-weight: 400 !important;
