--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -544,7 +544,7 @@ select.form-control option {
   content: "";
   width: 36px;
   height: 29.5%;
-  background:#eb7e97;
+  background:#af7280;
   position: absolute;
   top: -1px;
   right: 0;
@@ -558,7 +558,7 @@ select.form-control option {
   line-height: 30px;
   color: #000;
   text-transform: uppercase;
-  background: #eb7e97;
+  background: #aa6777;
   padding: 15px 0 0;
   margin: 0 35px 0 0;
   transition: all 0.4s ease 0s;
@@ -568,7 +568,7 @@ select.form-control option {
   font-size: 35px;
   font-weight: 700;
   color: #000;
-  background: #eb7e97;
+  background: #aa6777;
   padding: 5px 0 10px;
   margin: 0 35px 0 0;
   transition: all 0.4s ease 0s;
